# flts

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: copilot-instructions.md
cli/: Cargo.toml
cli/src/: main.rs
extension/: package-lock.json  package.json  pnpm-lock.yaml  wxt-env.d.ts
extension/AI Translation Tool/Shared (App)/: ViewController.swift
extension/AI Translation Tool/Shared (App)/Resources/: Script.js
extension/AI Translation Tool/iOS (App)/: AppDelegate.swift  SceneDelegate.swift
extension/src/entrypoints/overlay/: Overlay.svelte
extension/src/entrypoints/popup/: App.svelte
extension/src/lib/: Popup.svelte  dictionary.ts  utils.ts
flt-extension/: package.json  wxt.config.ts
flt-extension/AI Translation Tool/AI Translation Tool.xcodeproj/: project.pbxproj
flt-extension/AI Translation Tool/Shared (Extension)/: SafariWebExtensionHandler.swift
flt-extension/AI Translation Tool/macOS (App)/: AppDelegate.swift
flt-extension/AI Translation Tool/macOS (App)/Base.lproj/: Main.storyboard
flt-extension/src/entrypoints/: content.ts
flt-extension/src/entrypoints/popup/: app.css
flt-extension/src/lib/: Config.svelte  Popup.svelte  config.ts  dictionary.ts
harness/: INSTRUMENTATION.md  apply.sh  run.sh
harness/interaction/: INSTRUMENTATION.md  preprocess.py  run.sh
harness/mutex/: INSTRUMENTATION.md  preprocess.py  run.sh
harness/roster/: INSTRUMENTATION.md  run.sh
site/: .gitignore  build-android.sh  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  stryker.conf.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
site/.github/: copilot-instructions.md
site/src/: App.svelte  app.css  main.ts  router.ts  vite-env.d.ts
site/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
site/src-tauri/capabilities/: default.json  mobile.json
site/src-tauri/src/: app.rs  config.rs  lib.rs
site/src-tauri/src/app/: anki_sync.rs  chapter_context.rs  config.rs  library_view.rs  lyrics.rs  spotify.rs  spotify_web.rs  summary_generation_queue.rs  sync.rs  sync_daemon.rs  translation_queue.rs  versioned_emit.rs
site/src-tauri/src/app/library_view/: imports.rs  mod.rs  mutations.rs  queries.rs
site/src-tauri/src/app/spotify/: applescript.rs  mod.rs  web.rs
site/src/lib/: BaseDialog.svelte  Config.svelte  ConfirmDialog.svelte  CreateFolderDialog.svelte  ImportView.svelte  LibraryView.svelte  Link.svelte  MoveFolderDialog.svelte  Nav.svelte  TranslatorView.svelte  config.ts  debug.ts  library.spec.ts  library.svelte.ts  translator.ts  utils.ts
site/src/lib/book/: BookSummaryStatusStore.svelte.ts  BookView.svelte  ChapterParagraphsStore.svelte.ts  ChapterView.svelte  ChapterViewModel.svelte.ts  ChaptersPanel.svelte  ParagraphView.svelte  ParagraphViewModel.svelte.ts  WordSpan.svelte  WordView.svelte
site/src/lib/bookView/: BookView.svelte  ChapterParagraphsStore.svelte.ts  ChapterPlaceholderView.svelte  ChapterView.svelte  ChapterViewModel.svelte.ts  ParagraphView.svelte  ParagraphViewModel.svelte.ts  WordSpan.svelte  WordView.svelte  translationOverlay.ts
site/src/lib/chrome/: AnkiSyncButton.svelte  Link.svelte  Nav.svelte  ankiSyncHelpers.ts  ankiSyncStore.spec.ts  ankiSyncStore.svelte.ts
site/src/lib/config/: ConfigView.svelte  store.spec.ts  store.ts
site/src/lib/data/: cache.ts  db.ts  dbSql.ts  dbWorker.ts  dictionaryCache.ts  epubLoader.ts  importWorker.ts  importWorkerController.ts  library.svelte.ts  library.ts  queueDb.ts  tauri.svelte.ts  (+5 more)
site/tests/e2e/: anki-familiarity.spec.ts  anki-sync.spec.ts  app.spec.ts  chapter-initial-translation-batch.spec.ts  chapter-reading-state.spec.ts  chapter-session-position.spec.ts  chapter-summary-status.spec.ts  chapter-translate-all.spec.ts  chapter-translation-ratio.spec.ts  chapters-panel.spec.ts  dialogs.spec.ts  epub-import.spec.ts  lyrics.spec.ts  paragraph-view-multipage.spec.ts  paragraph-view.spec.ts  text-import.spec.ts  word-view-panel.spec.ts
site/tests/fixtures/: epub-generator.ts
site/tests/mocks/: tauri-api.ts  tauri-dialog.ts  tauri-event.ts  tauri-os.ts
spec/: MC.cfg  MC.tla  MC_full_medium.cfg  MC_full_reduced.cfg  MC_hunt_book_overwrite.cfg  MC_hunt_newest_wins.cfg  MC_hunt_translation_timestamp.cfg  Trace.cfg  Trace.tla  analysis-report.md  base.cfg  base.tla  frontend-backend-modeling-brief.md  instrumentation-spec.md  modeling-brief.md  mutex-modeling-brief.md
spec/interaction/: MC.cfg  MC.tla  MC_hunt_f1.cfg  MC_hunt_f2.cfg  MC_hunt_f3.cfg  MC_hunt_f4.cfg  Trace.cfg  Trace.tla  base.tla  bug-report.md  changelog.md  confirmed-bugs.md  instrumentation-spec.md
spec/interaction/output/: MC_hunt_f1_sim.out  MC_hunt_f2_sim.out  MC_hunt_f3_bfs.out  MC_hunt_f4_sim.out  MC_r1_bfs.out  MC_r1_bfs_2.out  MC_r1_bfs_3.out
spec/mutex/: MC.cfg  MC.tla  MC_hunt_doublelock.cfg  MC_hunt_starvation.cfg  MC_hunt_toctou.cfg  Trace.cfg  Trace.tla  base.cfg  base.tla  instrumentation-spec.md
spec/provider/: MC.cfg  MC.tla  MC_hunt_f1.cfg  MC_hunt_f2.cfg  MC_hunt_f3.cfg  Trace.cfg  Trace.tla  base.cfg  base.tla  bug-report.md  changelog.md  instrumentation-spec.md  modeling-brief.md
spec/provider/output/: MC_hunt_f1_bfs.out  MC_hunt_f2_bfs.out  MC_hunt_f3_bfs.out  MC_hunt_f3_sim.out  MC_round1.out
spec/roster/: MC.cfg  MC.tla  MC_hunt_f1.cfg  MC_hunt_f2.cfg  MC_hunt_f3.cfg  Trace.cfg  Trace.tla  base.tla  brief-coverage.md  bug-report.md  changelog.md  instrumentation-spec.md
spec/roster/output/: MC.out  MC_hunt_f1.out  MC_hunt_f2.out  MC_hunt_f3.out
src/: App.svelte  app.css
src/lib/: Config.svelte  Library.svelte  Popup.svelte  Reader.svelte  config.ts  dictionary.ts  library.ts  reader-inner.css  reader.css  reader.ts  screens.ts  utils.ts
sync-harness/: Cargo.toml
sync-harness/src/: main.rs
syncthing-core/: go.mod  go.sum  wrapper.go
syncthing-core/webui-vendor/: README.md
syncthing-sys/: Cargo.toml  build.rs
syncthing-sys/src/: lib.rs
tests/docker/: Dockerfile  Dockerfile.dockerignore  docker-compose.yml  run.sh
(+46 files in other folders)
