[workspace]
resolver = "3"
members = ["cli", "library", "site/src-tauri", "sync-harness", "syncthing-sys"]

[workspace.dependencies]
ahash = "0.8.12"
anyhow = "1.0.102"
directories = "6.0.0"
isolang = "2.4.0"
log = "0.4.29"
rand = "0.10.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.228"
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
tokio = "1.52.3"
unicode-normalization = "0.1.24"
uuid = { version = "1.23.0", features = ["serde", "v4"] }

[profile.release]
opt-level = "s"
lto = "thin"
panic = "abort"
strip = "symbols"

[profile.release-ship]
inherits = "release"
lto = "fat"
codegen-units = 1

