[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.6.1", features = ["derive"] }
directories = { workspace = true }
display-error-chain = "0.2.2"
file-format = { version = "0.29.0", features = ["reader"] }
flume = "0.12.0"
isolang = { workspace = true }
library = { path = "../library" }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true }
