[package]
name = "sync-harness"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "sync-harness"
path = "src/main.rs"

[dependencies]
# The real engine + roster/reconcile, minus the Tauri layer.
library = { path = "../library", features = ["sync-engine"] }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"] }
serde_json = { workspace = true }
isolang = { workspace = true }
tiny_http = "0.12"
