[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
library = { path = "../../library" }
log = "0.4.29"
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-log = "2.8.0"
strum = { version = "0.27.2", features = ["derive"] }
isolang = { version = "2.4.0", features = ["list_languages", "local_names", "serde"] }
directories = "6.0.0"
anyhow = "1.0.102"
tokio = { version = "1.51.1", features = ["full"] }
tauri-plugin-dialog = "2.7.0"
uuid = { version = "1.23.0", features = ["v4"] }
htmlentity = "1.3.2"
flume = "0.11.1"
tauri-plugin-devtools = "2.1.0"
dirs-next = "2.0.0"
tauri-plugin-os = "2.3.2"
ahash = { version = "0.8.12", features = ["serde"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2.4.1"
