[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
library = { path = "../../library" }
log = { workspace = true }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2.8.0"
strum = { workspace = true }
isolang = { workspace = true, features = ["list_languages", "local_names", "serde"] }
directories = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "fs", "time", "io-util", "process"] }
tauri-plugin-dialog = "2.7.0"
uuid = { workspace = true }
htmlentity = "1.3.2"
tauri-plugin-os = "2.3.2"
ahash = { workspace = true, features = ["serde"] }
reqwest = { workspace = true }
sha2 = "0.10"
base64 = "0.22"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
webbrowser = "1"
rand = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2.4.1"
